unpackaged/main/default/objects/TrainingCourse__c/TrainingCourse__c.object-meta.xml
<CustomObject>
    <label>Training Course</label>
    <nameField>
        <label>Training Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>