unpackaged/main/default/objects/TrainingCourse__c/fields/AverageDailyRate__c.field-meta.xml
<CustomField>
    <fullName>AverageDailyRate__c</fullName>
    <formula>TotalDailyRate__c / PlacesBooked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Daily Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>