unpackaged/main/default/objects/TrainingCourse__c/fields/CourseCode__c.field-meta.xml
<CustomField>
    <fullName>CourseCode__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <label>Course Code</label>
    <type>Text</type>
</CustomField>