unpackaged/main/default/objects/TrainingCourse__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>TEXT(Product__r.Family)</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>