unpackaged/main/default/objects/TrainingCourse__c/fields/DurationHours__c.field-meta.xml
<CustomField>
    <fullName>DurationHours__c</fullName>
    <description>Duration (Hours) of the training course.</description>
    <inlineHelpText>Duration (Hours) of the training course.</inlineHelpText>
    <label>Duration (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>