unpackaged/main/default/objects/TrainingCourse__c/fields/IsInvoiced__c.field-meta.xml
<CustomField>
    <fullName>IsInvoiced__c</fullName>
    <formula>AND(
  PlacesBooked__c &gt; 0,
  TotalBookingsInvoiced__c &gt;= PlacesBooked__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced</label>
    <type>Checkbox</type>
</CustomField>