unpackaged/main/default/objects/TrainingCourse__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brentwood</fullName>
            </value>
            <value>
                <fullName>Coventry</fullName>
            </value>
            <value>
                <fullName>Cranfield</fullName>
            </value>
            <value>
                <fullName>Liverpool</fullName>
            </value>
            <value>
                <fullName>Customer Site</fullName>
            </value>
            <value>
                <fullName>Online Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>