unpackaged/main/default/objects/TrainingCourse__c/fields/Lunch__c.field-meta.xml
<CustomField>
    <fullName>Lunch__c</fullName>
    <label>Lunch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>