unpackaged/main/default/objects/TrainingCourse__c/fields/NumberOfPlaces__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPlaces__c</fullName>
    <label>Number of Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>