unpackaged/main/default/objects/TrainingCourse__c/fields/PlacesBooked__c.field-meta.xml
<CustomField>
    <fullName>PlacesBooked__c</fullName>
    <label>Places Booked</label>
    <summaryFilterItems>
        <field>TrainingBooking__c.Status__c</field>
        <operation>equals</operation>
        <value>Booked</value>
    </summaryFilterItems>
    <summaryForeignKey>TrainingBooking__c.TrainingCourse__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>