unpackaged/main/default/objects/TrainingCourse__c/fields/PlacesRemaining__c.field-meta.xml
<CustomField>
    <fullName>PlacesRemaining__c</fullName>
    <formula>NumberOfPlaces__c - PlacesBooked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Places Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>