unpackaged/main/default/objects/TrainingCourse__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Actually a Lookup to Product2, despite the name</description>
    <label>Pricebook Entry</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Type__c</field>
            <operation>equals</operation>
            <value>Services</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Training Courses</relationshipLabel>
    <relationshipName>TrainingCourses</relationshipName>
    <type>Lookup</type>
</CustomField>