unpackaged/main/default/objects/TrainingCourse__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Training Courses</relationshipLabel>
    <relationshipName>TrainingCourses</relationshipName>
    <type>Lookup</type>
</CustomField>