unpackaged/main/default/objects/TrainingCourse__c/fields/Projector__c.field-meta.xml
<CustomField>
    <fullName>Projector__c</fullName>
    <label>Projector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>