unpackaged/main/default/objects/TrainingCourse__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <label>Room</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Location__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ground Floor Training Room</fullName>
            </value>
            <value>
                <fullName>First Floor Training Room</fullName>
            </value>
            <value>
                <fullName>First Floor Meeting Room</fullName>
            </value>
            <value>
                <fullName>First Floor Conference Room</fullName>
            </value>
            <value>
                <fullName>Training Room</fullName>
            </value>
            <value>
                <fullName>Customer Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>