unpackaged/main/default/objects/TrainingCourse__c/fields/TotalBookingsInvoiced__c.field-meta.xml
<CustomField>
    <fullName>TotalBookingsInvoiced__c</fullName>
    <label>Total Bookings Invoiced</label>
    <summaryFilterItems>
        <field>TrainingBooking__c.Invoiced__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>TrainingBooking__c.TrainingCourse__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>