unpackaged/main/default/objects/TrainingCourse__c/fields/TotalDailyRate__c.field-meta.xml
<CustomField>
    <fullName>TotalDailyRate__c</fullName>
    <label>Total Daily Rate</label>
    <summarizedField>TrainingBooking__c.DailyRate__c</summarizedField>
    <summaryFilterItems>
        <field>TrainingBooking__c.Status__c</field>
        <operation>equals</operation>
        <value>Booked</value>
    </summaryFilterItems>
    <summaryForeignKey>TrainingBooking__c.TrainingCourse__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>