unpackaged/main/default/objects/TrainingCourse__c/validationRules/Finish_Date_Not_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Finish_Date_Not_Before_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>FinishDate__c &lt; StartDate__c</errorConditionFormula>
    <errorDisplayField>FinishDate__c</errorDisplayField>
    <errorMessage>The finish date cannot be before the start date.</errorMessage>
</ValidationRule>