unpackaged/main/default/objects/TrainingCourse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Location__c</columns>
    <columns>NumberOfPlaces__c</columns>
    <columns>PlacesBooked__c</columns>
    <columns>StartDate__c</columns>
    <columns>FinishDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Training Courses</label>
</ListView>