unpackaged/main/default/objects/TrainingCourse__c/listViews/All_My_Training_Courses.listView-meta.xml
<ListView>
    <fullName>All_My_Training_Courses</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Location__c</columns>
    <columns>NumberOfPlaces__c</columns>
    <columns>PlacesBooked__c</columns>
    <columns>StartDate__c</columns>
    <columns>FinishDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>All My Training Courses</label>
</ListView>