unpackaged/main/default/objects/TrainingCourse__c/listViews/All_PLM_Training_Courses.listView-meta.xml
<ListView>
    <fullName>All_PLM_Training_Courses</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Location__c</columns>
    <columns>NumberOfPlaces__c</columns>
    <columns>PlacesBooked__c</columns>
    <columns>StartDate__c</columns>
    <columns>FinishDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>PLM,Solid Edge</value>
    </filters>
    <label>All PLM Training Courses</label>
</ListView>