unpackaged/main/default/objects/TrainingCourse__c/listViews/JLR_Training_Courses.listView-meta.xml
<ListView>
    <fullName>JLR_Training_Courses</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>FinishDate__c</columns>
    <columns>Status__c</columns>
    <columns>PlacesBooked__c</columns>
    <columns>NumberOfPlaces__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>enerjyhub</value>
    </filters>
    <label>JLR Training Courses</label>
    <sharedTo>
        <role>GroupTechnicalManager</role>
    </sharedTo>
</ListView>